--- a/MTPC/MTPC.vcxproj
+++ b/MTPC/MTPC.vcxproj
@@ -77,8 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Opencv\opencv\build\include\opencv2;C:\Opencv\opencv\build\include;C:\Users\TONY\source\repos\MTPC\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Opencv\opencv\build\x64\vc15;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\yanshuai01\Downloads\eigen-3.4.0;C:\Users\yanshuai01\Downloads\opencv\build\include;C:\Users\yanshuai01\Downloads\glm;C:\Opencv\opencv\build\include\opencv2;C:\Opencv\opencv\build\include;C:\Users\TONY\source\repos\MTPC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\yanshuai01\Downloads\opencv\build\x64\vc14\lib;C:\Users\yanshuai01\Downloads\opencv\build\x64\vc15;C:\Opencv\opencv\build\x64\vc15;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -86,9 +86,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <ReferencePath>C:\Users\TONY\source\repos\MTPC\include;$(ReferencePath)</ReferencePath>
-    <IncludePath>C:\Users\TONY\source\repos\MTPC\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\yanshuai01\Downloads\eigen-3.4.0;C:\Users\yanshuai01\Downloads\glm;C:\Users\yanshuai01\Downloads\opencv\build\include;C:\Users\TONY\source\repos\MTPC\include;$(IncludePath)</IncludePath>
     <ExecutablePath>C:\Opencv\opencv\build\include\opencv2;C:\Opencv\opencv\build\include;$(ExecutablePath)</ExecutablePath>
-    <LibraryPath>C:\Opencv\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\yanshuai01\Downloads\opencv\build\x64\vc15\lib;C:\Opencv\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -158,13 +158,14 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\TONY\source\repos\MTPC\include\eigen-3.4.0\eigen-3.4.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OpenMPSupport>true</OpenMPSupport>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_world454.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world460.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
