--- a/MTPC/MTPC.vcxproj
+++ b/MTPC/MTPC.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{91FA709F-1C04-47B3-B630-D9056CA727D9}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MTPC</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -48,7 +48,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -86,9 +86,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <ReferencePath>C:\Users\TONY\source\repos\MTPC\include;$(ReferencePath)</ReferencePath>
-    <IncludePath>C:\Users\yanshuai01\Downloads\MonteCarloPathTracing-main\MonteCarloPathTracing\3rd\Assimp\include;C:\Users\yanshuai01\Downloads\eigen-3.4.0;C:\Users\yanshuai01\Downloads\glm;C:\Users\yanshuai01\Downloads\opencv\build\include;C:\Users\TONY\source\repos\MTPC\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\TONY\Downloads\glm-0.9.9.8;C:\path_tracing\MonteCarloPathTracing\3rd\Assimp\include;C:\Users\yanshuai01\Downloads\MonteCarloPathTracing-main\MonteCarloPathTracing\3rd\Assimp\include;C:\Users\yanshuai01\Downloads\eigen-3.4.0;C:\Users\yanshuai01\Downloads\glm;C:\Users\yanshuai01\Downloads\opencv\build\include;C:\Users\TONY\source\repos\MTPC\include;$(IncludePath)</IncludePath>
     <ExecutablePath>C:\Opencv\opencv\build\include\opencv2;C:\Opencv\opencv\build\include;$(ExecutablePath)</ExecutablePath>
-    <LibraryPath>C:\Users\yanshuai01\Downloads\MonteCarloPathTracing-main\MonteCarloPathTracing\3rd\Assimp\lib;C:\Users\yanshuai01\Downloads\opencv\build\x64\vc15\lib;C:\Opencv\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\path_tracing\MonteCarloPathTracing\3rd\Assimp\lib;C:\Users\yanshuai01\Downloads\MonteCarloPathTracing-main\MonteCarloPathTracing\3rd\Assimp\lib;C:\Users\yanshuai01\Downloads\opencv\build\x64\vc15\lib;C:\Opencv\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -165,7 +165,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_world460.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world454.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
